--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "^19.1.0",
     "@angular/service-worker": "^19.1.0",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "pg-promise": "^11.14.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
