--- a/front/package.json
+++ b/front/package.json
@@ -33,6 +33,7 @@
     "@angular/compiler-cli": "^19.1.0",
     "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
+    "cypress": "^14.5.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
