membre controller & model

--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,17 +1,10 @@
-# Utilise une image Node officielle
-FROM node:20
+FROM node:18
 
-# Crée et utilise un répertoire dans le conteneur
 WORKDIR /app
-
-# Copie les fichiers de ton projet
 COPY package*.json ./
 RUN npm install
 
 COPY . .
 
-# Expose le port (si ton app écoute sur 3000)
 EXPOSE 3000
-
-# Démarre l'app
-CMD ["node", "app.js"]
+CMD ["npm", "start"]
