--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,33 @@
 version: '3.8'
+
 services:
-  jenkins:
-    image: jenkins/jenkins:lts-jdk17
-    container_name: jenkins-master
-    ports:
-      - "8080:8080"
-      - "50000:50000"
-    volumes:
-      - jenkins_home:/var/jenkins_home
-    restart: unless-stopped
-
-  agent:
+  frontend:
     build:
-      context: ./agent
-    container_name: jenkins-agent
+      context: ./frontend
+    ports:
+      - "8080:80"
     depends_on:
-      - jenkins
-    environment:
-      - JENKINS_URL=http://jenkins:8080
-      - JENKINS_AGENT_NAME=agent-docker
-      - JENKINS_SECRET=c2071ebb70b7f2f0580024ba2ae430efcab54287d98b3c32c9fc974bb1e64ee9
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
-
-  db:
-    image: postgres:15
-    restart: always
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydb
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-      - ./db/init:/docker-entrypoint-initdb.d
+      - backend
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: mydb
-      DB_USER: user
-      DB_PASSWORD: password
+      - DB_HOST=db
+      - DB_USER=postgres
+      - DB_PASS=postgres
     depends_on:
       - db
+
+  db:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     volumes:
-      - ./backend:/app
-    restart: unless-stopped
+      - pgdata:/var/lib/postgresql/data
 
 volumes:
-  jenkins_home:
-    name: jenkins_home
-    
   pgdata:
