--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,20 +1,10 @@
-FROM node:18 AS builder
-
+# Stage 1: build Angular app
+FROM node:20-alpine as build
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
-
 COPY . .
-RUN npm run build --prod
+RUN npm ci && npx ng build --configuration production
 
-# Stage 2: Serve with Nginx
+# Stage 2: serve with Nginx
 FROM nginx:alpine
-
-# Copy built app to nginx public folder
-COPY --from=builder /app/dist/<your-app-name> /usr/share/nginx/html
-
-# Copy a default nginx config (optional)
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
