--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -6,5 +6,5 @@ RUN npm ci && npx ng build --configuration production
 
 # Stage 2: serve with Nginx
 FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/dist/abubakkar-apps /usr/share/nginx/html
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
