--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -18,11 +18,10 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm install
-        working-directory: ./backend
+        run: cd ./backend && npm install
 
       - name: Run tests
-        run: npm test
+        run: cd ./backend && npm test
 
       - name: Upload build artifact
         if: success()
