--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   jenkins:
     image: jenkins/jenkins:lts-jdk17
@@ -7,7 +8,8 @@ services:
       - "8080:8080"
       - "50000:50000"
     volumes:
-      - jenkins_home:/var/jenkins_home
+      - angular-19-todo-app_jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
 
   agent:
@@ -26,6 +28,7 @@ services:
 
   db:
     image: postgres:15
+    container_name: postgres-db
     restart: always
     environment:
       POSTGRES_USER: user
@@ -54,7 +57,6 @@ services:
     restart: unless-stopped
 
 volumes:
-  jenkins_home:
-    name: jenkins_home
-    
+  angular-19-todo-app_jenkins_home:
+    external: true
   pgdata:
