--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,19 +12,10 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
 
-  agent:
+  t-as-la-ref-agent:
     build:
       context: ./agent
-    container_name: jenkins-agent
-    depends_on:
-      - jenkins
-    environment:
-      - JENKINS_URL=http://jenkins:8080
-      - JENKINS_AGENT_NAME=agent-docker
-      - JENKINS_SECRET=c2071ebb70b7f2f0580024ba2ae430efcab54287d98b3c32c9fc974bb1e64ee9
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
+    image: t-as-la-ref-agent:latest
 
   db:
     image: postgres:15
