--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   jenkins:
-    image: jenkins/jenkins:lts-jdk17
+    build:
+      context: ./jenkins-master
+    image: jenkins-docker-enabled
     container_name: jenkins-master
     ports:
       - "8080:8080"
