--- a/jenkins-master/Dockerfile
+++ b/jenkins-master/Dockerfile
@@ -5,4 +5,4 @@ USER root
 # Install Docker CLI (pour agent { docker } dans Jenkinsfile)
 RUN apt-get update && apt-get install -y docker.io && apt-get clean
 
-USER jenkins
+USER root
