--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "@angular/service-worker": "^19.1.0",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
     "pg-promise": "^11.14.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
