--- a/front/package.json
+++ b/front/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "ng": "ng",
     "postinstall": "npx cypress install",
-    "start": "ng serve --host=0.0.0.0 --port=4200 --disable-host-check --watch=false",
+    "start": "ng serve --host=0.0.0.0 --port=4200 --disable-host-check --watch",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:e2e": "cypress run --config-file cypress.config.ts",
-    "e2e": "start-server-and-test start http://0.0.0.0:4200 test:e2e --timeout 120000"
+    "e2e": "start-server-and-test start http://localhost:4200 test:e2e --timeout 120000"
   },
   "private": true,
   "dependencies": {
