--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Run tests
         run: cd ./backend && npm test
+
+      - name: Run performance
+        run: cd ./backend && npm run performance
