--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -31,4 +31,4 @@ jobs:
         run: cd ./backend && npm test
 
       - name: Run performance
-        run: cd ./backend && npm run performance
+        run: cd ./backend && npm run perf
