--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -30,5 +30,13 @@ jobs:
       - name: Run tests
         run: cd ./backend && npm test
 
-      - name: Run performance
-        run: cd ./backend && npm run perf
+      - name: Start backend in background
+        run: nohup npm start &
+      - name: Wait for backend to be ready
+        run: |
+          until curl --output /dev/null --silent --head --fail http://localhost:3000/api/membres; do
+            echo "Waiting for backend..."
+            sleep 3
+          done
+      - name: Run performance tests
+        run: k6 run tests/performance.test.js
