--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -31,7 +31,7 @@ jobs:
         run: cd ./backend && npm test
 
       - name: Start backend in background
-        run: cd backend && nohup npm start > backend.log 2>&1 &
+        run: cd backend && npm start
       - name: Wait for backend to be ready
         run: |
           until curl --output /dev/null --silent --head --fail http://localhost:3000/api/membres; do
