--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,13 +1,16 @@
 # Stage 1: Build Angular app
 FROM node:20-alpine AS build
 
+ARG NODE_ENV
+ENV NODE_ENV=$NODE_ENV
+
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm ci
 
 COPY . .
-RUN npx ng build --configuration production
+RUN npx ng build --configuration $NODE_ENV
 
 # Stage 2: Serve with Nginx
 FROM nginx:alpine
