--- a/front/angular.json
+++ b/front/angular.json
@@ -29,7 +29,8 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
