--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Run performance tests
         run: |
           cd ./backend
-          k6 run tests/perfermormance.js
+          k6 run tests/performance.test.js
