--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -17,23 +18,35 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Install dependencies
-        run: cd ./backend && npm install
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: npm install
+
+      - name: Install Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      - name: Start docker-compose
+        working-directory: ./backend
+        run: docker-compose up -d
+
+      - name: Wait for backend to be ready
+        run: sleep 10 # tu peux adapter ce délai selon ton besoin
 
       - name: Install k6
         run: |
-          curl -s https://dl.k6.io/key.gpg | sudo apt-key add -
-          echo "deb https://dl.k6.io/deb stable main" | sudo tee /etc/apt/sources.list.d/k6.list
+          sudo apt-get update
+          sudo apt-get install -y gnupg
+          curl -s https://dl.k6.io/key.gpg | gpg --dearmor | sudo tee /usr/share/keyrings/k6-archive-keyring.gpg > /dev/null
+          echo "deb [signed-by=/usr/share/keyrings/k6-archive-keyring.gpg] https://dl.k6.io/deb stable main" | sudo tee /etc/apt/sources.list.d/k6.list
           sudo apt-get update
           sudo apt-get install -y k6
 
-      - name: Run tests
-        run: cd ./backend && npm test
-
-      - name: start docker-compose
-        run: cd ./backend && docker compose up -d
+      - name: Run unit/integration tests
+        working-directory: ./backend
+        run: npm test
 
       - name: Run performance tests
-        run: |
-          cd ./backend
-          k6 run tests/performance.test.js
+        working-directory: ./backend
+        run: k6 run tests/performance.test.js
